C placed at right distance from most S

--- a/test/makefile
+++ b/test/makefile
@@ -1,7 +1,13 @@
 InputCore = Au144_MD6341surface1.xyz
-InputLigand = ligand.mol2
-OutputFile = Au144L1-60.pdb
-ResidueName = LFU
+
+#InputLigand = ligand.mol2
+#OutputFile = Au144L1-60.pdb
+#ResidueName = LFU
+
+InputLigand = MET.mol2
+OutputFile = Au144_MET.pdb
+ResidueName = MET
+
 VMD := /software/vmd-1.9.1/bin/vmd191
 
 $(OutputFile) : $(InputCore) $(InputLigand)
